bk_ida/gccida/c0/handle_rd_kill_set
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_rd_kill_set/src/gcse.c:3440:20: error: use of undeclared identifier 'uid_cuid_1'
v4 = *( ( _DWORD *)uid_cuid_1 + this_reg->insn->fld[0].rtint) >> 6; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_rd_kill_set/src/gcse.c:3441:39: error: use of undeclared identifier 'uid_cuid_1'
v3->elms[v4] |= 1LL << ( *( ( _BYTE *)uid_cuid_1 + 4 * this_reg->insn->fld[0].rtint) & 0x3F); 
                                      ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_rd_kill_set/src/obj/gcse.o] Error 1
